objects/fferpcore__ffhyb_HybridConfiguration__mdt.object
<CustomObject>
    <description>Contains configuration details for connecting to external systems, such as Heroku apps. For internal use only.</description>
    <fields>
        <fullName>fferpcore__Endpoint__c</fullName>
        <description>The endpoint of the remote server used for the production environment.</description>
        <inlineHelpText>The endpoint of the remote server used for the production environment.</inlineHelpText>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__JwtSigningKey__c</fullName>
        <description>The authorization key provided by FinancialForce.</description>
        <inlineHelpText>The authorization key provided by FinancialForce.</inlineHelpText>
        <label>JWT Signing Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__SandboxEndpoint__c</fullName>
        <description>The endpoint of the remote server used for the sandbox environment.</description>
        <inlineHelpText>The endpoint of the remote server used for the sandbox environment.</inlineHelpText>
        <label>Sandbox Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Hybrid Configuration</label>
    <pluralLabel>Hybrid Configurations</pluralLabel>
</CustomObject>